[package]
name = "learn_rust"
version = "0.1.0"
authors = ["123dou <cyk.dou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
itertools = "0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
serde_json = "1.0.64"
rust-crypto = "0.2.36"