[package]
name = "learn_rust"
version = "0.1.0"
authors = ["123dou <cyk.dou@gmail.com>"]
edition = "2018"


# 开发模板, 对应`cargo build`命令
[profile.dev]
opt-level =0# 控制编译器的 --opt-level 参数，也就是优化参数 0不进行优化，1-3优化强度增加，s允许常用的优化外加缩小二进制的体积
debug =true# 控制编译器是否开启 `-g` 参数
rpath =false# 控制编译器的 `-C rpath` 参数
lto =false# 控制`-C lto` 参数，此参数影响可执行文件和静态库的生成，
debug-assertions =true# 控制调试断言是否开启
codegen-units =1# 控制编译器的 `-C codegen-units` 参数。注意，当`lto = true`时，此字段值被忽略
# 发布模板, 对应`cargo build --release`命令
[profile.release]
opt-level =3
debug =false
rpath =false
lto =false
debug-assertions =false
codegen-units =1
# 测试模板，对应`cargo test`命令
[profile.test]
opt-level =0
debug =true
rpath =false
lto =false
debug-assertions =true
codegen-units =1
# 性能评估模板，对应`cargo bench`命令
[profile.bench]
opt-level =3
debug =false
rpath =false
lto =false
debug-assertions =false
codegen-units =1
# 文档模板，对应`cargo doc`命令
[profile.doc]
opt-level =0
debug =true
rpath =false
lto =false
debug-assertions =true
codegen-units =1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
itertools = "0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
serde_json = "1.0.64"
rust-crypto = "0.2.36"